# ghost

./: .gitignore  AWESOME_FEATURES_DEMO.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  METRICS_SETUP.md  README.md  build-release.sh  check-terminals.sh  create-release.sh  example-config.toml  ghostty-config-tip.txt  globe_animation_demo.md  globe_improvements.md  install.ps1  install.sh  test-ssh-launch.sh  test_improvements.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  colors.rs  config.rs  forms.rs  health.rs  lib.rs  main.rs  models.rs  ssh.rs  themes.rs
src/ui/: mod.rs
