[package]
name = "ghost-ssh"
version = "0.1.1"
edition = "2021"
authors = ["Seawn <your-email@example.com>"]
description = "A modern, cross-platform SSH connection manager with beautiful terminal UI and security assessment"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Smoke516/ghost"
homepage = "https://github.com/Smoke516/ghost"
documentation = "https://docs.rs/ghost-ssh"
keywords = ["ssh", "terminal", "tui", "connection-manager", "security"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["screenshots/", "docs/", ".github/", "target/", "*.log"]
rust-version = "1.70.0"

[[bin]]
name = "ghost"
path = "src/main.rs"

[dependencies]
ratatui = "0.25"
crossterm = "0.27"
tokio = { version = "1.35", features = ["full"] }
russh = "0.40"
russh-keys = "0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
shellexpand = "3.1"
async-trait = "0.1"
which = "4.4"
